knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facility_Accepts_Visa_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Facility_Accepts_Visa_Candidates__c</fullName>
    <label>Facility Accepts Visa Candidates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>