knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facility_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Facility_E_mail__c</fullName>
    <description>Facility E-mail</description>
    <label>Facility E-mail</label>
    <type>Email</type>
</CustomField>