knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facility_NPI_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_NPI_ID__c</fullName>
    <label>Facility NPI ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>