knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facility_Profile__c.field-meta.xml
<CustomField>
    <fullName>Facility_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Profile</label>
    <referenceTo>Facility_Profile__c</referenceTo>
    <relationshipLabel>Facility Profiles</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>