knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facility_Sheet_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Facility_Sheet_Requirements__c</fullName>
    <label>Facility Sheet Requirements</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>