knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facility_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Short_Name__c</fullName>
    <description>Facility Short Name</description>
    <label>Facility Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>