knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/FKA_AKA__c.field-meta.xml
<CustomField>
    <fullName>FKA_AKA__c</fullName>
    <label>FKA/AKA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>