knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Former_Group__c.field-meta.xml
<CustomField>
    <fullName>Former_Group__c</fullName>
    <label>Former Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4M</fullName>
            </value>
            <value>
                <fullName>4md2</fullName>
            </value>
            <value>
                <fullName>Affilion</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>AMN Healthcare</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Born &amp; Bicknell</fullName>
            </value>
            <value>
                <fullName>California Emergency Physicians (CEP)</fullName>
            </value>
            <value>
                <fullName>Cejka Search</fullName>
            </value>
            <value>
                <fullName>Cornerstone Physicians Management Group (CPMG)</fullName>
            </value>
            <value>
                <fullName>Correct Care</fullName>
            </value>
            <value>
                <fullName>Delta Physician Placement</fullName>
            </value>
            <value>
                <fullName>EDCare (HPP)</fullName>
            </value>
            <value>
                <fullName>EmCare</fullName>
            </value>
            <value>
                <fullName>Emergency Consutlants (ECI)</fullName>
            </value>
            <value>
                <fullName>Emergency Medical Associates (EMA)</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine Physicians (EMP)</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine Specialists</fullName>
            </value>
            <value>
                <fullName>Emergency Physicians Medical Group (EPMG)</fullName>
            </value>
            <value>
                <fullName>Emergency Physicians of Tidewater (EPT)</fullName>
            </value>
            <value>
                <fullName>Emergency Service Partners (ESP)</fullName>
            </value>
            <value>
                <fullName>Emergency Staffing Solutions (ESS)</fullName>
            </value>
            <value>
                <fullName>EmergiNet</fullName>
            </value>
            <value>
                <fullName>ER Stat</fullName>
            </value>
            <value>
                <fullName>Hospital Employees</fullName>
            </value>
            <value>
                <fullName>Hospital Physician Partners</fullName>
            </value>
            <value>
                <fullName>Infinity Healthcare</fullName>
            </value>
            <value>
                <fullName>Jackson &amp; Coker (JC Nationwide)</fullName>
            </value>
            <value>
                <fullName>Local Group</fullName>
            </value>
            <value>
                <fullName>Marshall Emergency Services Associates (MESA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>