knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Geographic_Classification__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Classification__c</fullName>
    <description>Geographic Classification</description>
    <label>Geographic Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>