knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Global_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_ID__c</fullName>
    <label>Global Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>