knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Global_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Facility_ID__c</fullName>
    <formula>Global_Account_ID__c</formula>
    <label>Global Facility ID</label>
    <type>Text</type>
</CustomField>