knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Global_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_ID__c</fullName>
    <description>Global ID from Salesforce Corp</description>
    <label>Global ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>