knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/GlobalFacilityID__c.field-meta.xml
<CustomField>
    <fullName>GlobalFacilityID__c</fullName>
    <externalId>true</externalId>
    <label>GlobalFacilityID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>