knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>CASE(Text(Region__c),
&quot;S1T1&quot;, &quot;A&quot;,
&quot;S1T2&quot;, &quot;A&quot;,
&quot;S1T3&quot;, &quot;A&quot;,
&quot;S2T1&quot;, &quot;A&quot;,
&quot;S2T2&quot;, &quot;A&quot;,
&quot;S2T3&quot;, &quot;A&quot;,
&quot;S2T4&quot;, &quot;A&quot;,
&quot;S2T5&quot;, &quot;A&quot;,
&quot;S3T1&quot;, &quot;B&quot;,
&quot;S3T2&quot;, &quot;B&quot;,
&quot;S3T3&quot;, &quot;B&quot;,
&quot;S4T1&quot;, &quot;B&quot;,
&quot;S4T2&quot;, &quot;B&quot;,
&quot;S4T3&quot;, &quot;B&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>