knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Group_Affiliated__c.field-meta.xml
<CustomField>
    <fullName>Group_Affiliated__c</fullName>
    <label>Group Affiliated</label>
    <length>70</length>
    <type>Text</type>
</CustomField>