knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Group_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Group_Ownership__c</fullName>
    <label>Hospital System Affiliation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>