knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Group_PTAN__c.field-meta.xml
<CustomField>
    <fullName>Group_PTAN__c</fullName>
    <label>Group PTAN#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>