knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Header_Company__c.field-meta.xml
<CustomField>
    <fullName>Header_Company__c</fullName>
    <label>Header Company</label>
    <type>TextArea</type>
</CustomField>