knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Healthcare_Recoveries__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Recoveries__c</fullName>
    <label>Healthcare Recoveries</label>
    <type>Date</type>
</CustomField>