knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HM_Former_Group__c.field-meta.xml
<CustomField>
    <fullName>HM_Former_Group__c</fullName>
    <label>HM Former Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>