knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HM_Group__c.field-meta.xml
<CustomField>
    <fullName>HM_Group__c</fullName>
    <label>HM Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apogee</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Cogent</fullName>
            </value>
            <value>
                <fullName>Eagle</fullName>
            </value>
            <value>
                <fullName>ECI</fullName>
            </value>
            <value>
                <fullName>EmCare</fullName>
            </value>
            <value>
                <fullName>HCAPs</fullName>
            </value>
            <value>
                <fullName>HMG</fullName>
            </value>
            <value>
                <fullName>Hospital Employees</fullName>
            </value>
            <value>
                <fullName>In Compass</fullName>
            </value>
            <value>
                <fullName>IPC</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Loya</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Premier Physician Services</fullName>
            </value>
            <value>
                <fullName>Schumacher Group</fullName>
            </value>
            <value>
                <fullName>Sound Inpatient</fullName>
            </value>
            <value>
                <fullName>Team Health</fullName>
            </value>
            <value>
                <fullName>The Exigence Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>