knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HM_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>HM_Group_Description__c</fullName>
    <label>HM Group Description</label>
    <type>TextArea</type>
</CustomField>