knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HM_Start_Date__c</fullName>
    <label>HM Start Date</label>
    <type>Date</type>
</CustomField>