knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospital_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Ownership__c</fullName>
    <description>Ownership Type</description>
    <label>DHC Hospital Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>