knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospital_Ownership_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Ownership_Type_2__c</fullName>
    <label>Hospital Ownership Type 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Federally Owned</fullName>
            </value>
            <value>
                <fullName>Church Owned</fullName>
            </value>
            <value>
                <fullName>State Owned</fullName>
            </value>
            <value>
                <fullName>County Owned</fullName>
            </value>
            <value>
                <fullName>City Owned</fullName>
            </value>
            <value>
                <fullName>Hospital Authority Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>