knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospital_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Ownership_Type__c</fullName>
    <label>Hospital Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Profit</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>