knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospital_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Tax_ID__c</fullName>
    <label>Hospital Tax ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>