knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospital_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Taxonomy__c</fullName>
    <label>Hospital Taxonomy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>