knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospitalist_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Hospitalist_Contract_Expiration__c</fullName>
    <label>Hospitalist Contract Expiration</label>
    <type>Date</type>
</CustomField>