knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Hospitals__c.field-meta.xml
<CustomField>
    <fullName>Hospitals__c</fullName>
    <label>Hospitals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>