knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HPSA__c.field-meta.xml
<CustomField>
    <fullName>HPSA__c</fullName>
    <description>Whether the Account is in a Health Professional Shortage Area - Primary Care. Identification of HPSA eligible locations for Visa physician utilization.</description>
    <label>HPSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>