knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HPSA_Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>HPSA_Last_Update_Date__c</fullName>
    <label>HPSA Last Update Date</label>
    <type>Date</type>
</CustomField>