knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HPSA_Status__c.field-meta.xml
<CustomField>
    <fullName>HPSA_Status__c</fullName>
    <description>Status of HPSA Designation. Indicator of whether the HPSA is still valid or is propsed for withdrawal or withdrawn.</description>
    <label>HPSA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Designated</fullName>
            </value>
            <value>
                <fullName>No New Data</fullName>
            </value>
            <value>
                <fullName>Proposed Withdrawal</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>