knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HQ_County__c.field-meta.xml
<CustomField>
    <fullName>HQ_County__c</fullName>
    <description>County</description>
    <label>HQ County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>