knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HQ_Latitude__c.field-meta.xml
<CustomField>
    <fullName>HQ_Latitude__c</fullName>
    <description>Latitude</description>
    <label>HQ Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>