knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HQ_Longitude__c.field-meta.xml
<CustomField>
    <fullName>HQ_Longitude__c</fullName>
    <description>Longitude</description>
    <label>HQ Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>