knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/HQ_Region__c.field-meta.xml
<CustomField>
    <fullName>HQ_Region__c</fullName>
    <description>Region</description>
    <label>HQ Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>