knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ID_Formula__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (Formula)</label>
    <type>Text</type>
</CustomField>