knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Independent__c.field-meta.xml
<CustomField>
    <fullName>Independent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Independent</label>
    <type>Checkbox</type>
</CustomField>