knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Innovation_Growth__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Growth__c</fullName>
    <label>Innovation/Growth</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>