knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Insurance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Effective_Date__c</fullName>
    <label>Insurance Effective Date</label>
    <type>Date</type>
</CustomField>