knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Insurance_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provided_By__c</fullName>
    <label>Insurance Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>