knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Is_this_a_Free_Standing_Facility__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Free_Standing_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Free Standing Facility</description>
    <label>Is this a Free Standing Facility?</label>
    <type>Checkbox</type>
</CustomField>