knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/IT_ADT_Email__c.field-meta.xml
<CustomField>
    <fullName>IT_ADT_Email__c</fullName>
    <label>IT - ADT Email</label>
    <type>Email</type>
</CustomField>