knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Joinder_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Date_1__c</fullName>
    <label>Joinder Date 1</label>
    <type>Date</type>
</CustomField>