knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Leadership_Support__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Support__c</fullName>
    <label>Leadership Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>