knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Legacy_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_ID__c</fullName>
    <description>Using for DataMigration purpose</description>
    <label>Legacy Account ID</label>
    <type>TextArea</type>
</CustomField>