knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Legacy_HPP__c.field-meta.xml
<CustomField>
    <fullName>Legacy_HPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy HPP</label>
    <type>Checkbox</type>
</CustomField>