knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Licensure__c.field-meta.xml
<CustomField>
    <fullName>Licensure__c</fullName>
    <label>Licensure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>