knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Line_Company__c.field-meta.xml
<CustomField>
    <fullName>Line_Company__c</fullName>
    <label>Line Company</label>
    <type>TextArea</type>
</CustomField>