knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/LLC_Management__c.field-meta.xml
<CustomField>
    <fullName>LLC_Management__c</fullName>
    <label>LLC Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member Managed</fullName>
            </value>
            <value>
                <fullName>Manager Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>