knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Long_Term_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Liabilities__c</fullName>
    <description>Long Term Liabilities</description>
    <label>Long Term Liabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>