knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Magnet_Designation__c.field-meta.xml
<CustomField>
    <fullName>Magnet_Designation__c</fullName>
    <description>Whether a hospital is designated a magnet facilty by the American Nurses Credentialing Center (ANCC)</description>
    <label>Magnet Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>