knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Managing_Partner_Member__c.field-meta.xml
<CustomField>
    <fullName>Managing_Partner_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managing Partner/Member</label>
    <type>Checkbox</type>
</CustomField>