knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Mark_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark for Deletion</label>
    <type>Checkbox</type>
</CustomField>