knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Mark_for_Deletion_Comment__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Deletion_Comment__c</fullName>
    <label>Mark for Deletion Comment</label>
    <type>TextArea</type>
</CustomField>