knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Market_Manager__c.field-meta.xml
<CustomField>
    <fullName>Market_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>