knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/MCC_CC_RATE__c.field-meta.xml
<CustomField>
    <fullName>MCC_CC_RATE__c</fullName>
    <description>Percentage of Patients whose DRG has a Major Complicating Condition (MCC) or Complication Condition (CC)</description>
    <label>MCC/CC Rate</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>