knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/MCC_CC_Rate_formula__c.field-meta.xml
<CustomField>
    <fullName>MCC_CC_Rate_formula__c</fullName>
    <formula>MCC_CC_RATE__c * 100</formula>
    <label>MCC/CC Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>