knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Medical_School_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Medical_School_Affiliation__c</fullName>
    <description>Medical School Affiliation</description>
    <label>Medical School Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>