knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Medical_Staff_Office_FAX__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff_Office_FAX__c</fullName>
    <label>Medical Staff Office FAX #</label>
    <type>Phone</type>
</CustomField>