knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/MIPS_Reporting__c.field-meta.xml
<CustomField>
    <fullName>MIPS_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MIPS Reporting</label>
    <type>Checkbox</type>
</CustomField>