knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/MSL_Account_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>MSL_Account_Difficulty__c</fullName>
    <label>MSL Account Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Start-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>