knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>DELETE Corporate Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>