knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/National_Account_Member__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Account Member</label>
    <type>Checkbox</type>
</CustomField>