knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/National_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>