knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/National_Account_Secondary_Support__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Secondary_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Account Secondary Support</label>
    <type>Checkbox</type>
</CustomField>