knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Nearby_Places__c.field-meta.xml
<CustomField>
    <fullName>Nearby_Places__c</fullName>
    <label>Nearby Attractions</label>
    <type>TextArea</type>
</CustomField>