knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Net_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Net_Earnings__c</fullName>
    <label>Net Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>