knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Net_Earnings_as_of_Net_Revenues__c.field-meta.xml
<CustomField>
    <fullName>Net_Earnings_as_of_Net_Revenues__c</fullName>
    <label>Net Earnings as % of Net Revenues</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>