knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <description>Net Income</description>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>